--- a/style.css
+++ b/style.css
@@ -263,10 +263,10 @@ ul.profiles_toydetail_block_bottom_right_top {margin:0 0 25px 0;}
 #profiles_toydetail_block_bottom_two_top_right_name {color:#262725;font-size:24px;font-family:'Roboto',sans-serif;float:left;margin:6px 0 0 0;}
 #profiles_toydetail_block_bottom_two_top_right_birthdate {margin:12px 0 0 0;background:url(images/birthday-icon-copy.png)no-repeat;padding:0 0 0 40px;float:left;}
 #profiles_toydetail_block_bottom_two_top_right_lastused {margin:16px 0 0 0;float:left;}
-#profiles_toydetail_block_bottom_three_one {}
-#profiles_toydetail_block_bottom_three_two {}
-#profiles_toydetail_block_bottom_three_three {}
-#profiles_toydetail_block_bottom_three_four {}
-#profiles_bottom {background:url(images/add-button.png)no-repeat;padding:22px 0 0 102px;margin:37px 0 0 237px;width:572px;color:#323132;font-size:20px;font-family:'Roboto',sans-serif;height:73px;float:left;}
+#profiles_toydetail_block_bottom_three_one {float:left;margin:15px 0 0 58px;padding:0;color:#323132;font-size:14px;font-family:'Roboto',san-serif;font-weight:700;}
+#profiles_toydetail_block_bottom_three_two {float:left;margin:4px 0 0 56px;padding:0;height:67px;width:201px;background:url(images/profile-timepicker-bg.png)no-repeat;}
+#profiles_toydetail_block_bottom_three_three {float:left;margin:14px 0 0 57px;padding:0;height:15px;width:200px;color:#323132;font-size:14px;font-family:'Roboto',san-serif;font-weight:700;}
+#profiles_toydetail_block_bottom_three_four {float:left;margin:4px 0 0 56px;padding:0;height:67px;width:201px;background:url(images/profile-timepicker-bg.png)no-repeat;}
+#profiles_toydetail_block_bottom_three_five {background:url(images/o-n-button.png)no-repeat;width:75px;height:35px;margin:210px 0 0 110px;}
 input.profiles_name {border:0;border-bottom:1px solid #df5d59;overflow:hidden;resize:none;width:178px;background:white;color:#262725;font-family:'Roboto',sans-serif;outline:0;padding:0 0 4px 0;margin:0;height:30px;font-size:24px;}
 input.profiles_date {border:0;border-bottom:1px solid #df5d59;overflow:hidden;resize:none;width:136px;background:white;color:#262725;font-family:'Roboto',sans-serif;outline:0;padding:0;margin:0;height:23px;font-size:14px;}
