--- a/style.css
+++ b/style.css
@@ -131,7 +131,15 @@ select.suggest_content-dropdown {-webkit-appearance: none;-moz-appearance: none;
 #content_right_right ul li {display:inline;float:left;margin:0 5px;}
 #content_right_right ul li a {text-decoration:none;font-size:16px;background:url(images/rectangle-83-copy-2.png) no-repeat;color:#df5d59;font-family: 'Roboto', sans-serif;display:block;width:90px;height:29px;text-align:center;padding:3px 0 0 0;}
 #content_right_right ul li a:hover {background:url(images/rectangle-83.png)no-repeat;color:#fff;text-decoration:none;font-size:16px;width:90px;height:29px;text-align:center;padding:3px 0 0 0;}
-#content_right_two {background:#fff url(images/2015-10-26_1312.png)no-repeat center center;height:376px;margin:0 0 27px 0;}
+#content_right_two {position:relative;background:white;height:376px;margin:0 0 27px 0;font-family: 'Roboto', sans-serif;font-size:18px;border-bottom-left-radius:5px;border-bottom-right-radius: 5px;}
+.content_right_two_category{position:absolute;background-position:center;height:45px;width:188px;color:white;font-size:20px;font-weight:bold;padding-top:10px;}
+#content_right_two_jokes{top:83px;left:83px;background:url(images/jokesback.png)no-repeat;text-indent:17px;}
+#content_right_two_questions{top:83px;right:88px;background:url(images/questionsback.png)no-repeat;text-indent:38px;}
+#content_right_two_games{top:243px;right:88px;background:url(images/gamesback.png)no-repeat;text-indent:64px;}
+#content_right_two_stories{top:243px;left:83px;background:url(images/storiesback.png)no-repeat;text-indent:17px;}
+#content_right_two_chart{position:absolute;top: 30px;left: 323.5px;height: 300px;width: 300px;}
+#content_right_two_minutes{position:absolute;top:53%;left:48.5%;transform: translate(-50%, -50%);font-size:22px;color:#262725;text-align:center}
+#minutes_used{height:86px;font-size:100px;font-family:'BloggerSans',sans-serif;}
 #content_right_three {margin:0 0 40px 0;height:260px;float:left;}
 #content_right_three_block_one {background:#fff url(images/icon-comment-icon-comment.png) no-repeat center center;width:223px;height:246px;float:left;margin:0 10px 0 0;border:3px solid #95c2ce; border-radius:5px;}
 #content_right_three_block_two {background:#fff url(images/icon-pawn.png) no-repeat center center;width:223px;height:246px;float:left;margin:0 10px 0 0;border:3px solid #95c2ce;border-radius:5px;}
@@ -174,7 +182,7 @@ select.suggest_content-dropdown {-webkit-appearance: none;-moz-appearance: none;
 #footer_three ul li {margin:6px 0;padding:0;}
 #footer_three ul li a {text-decoration:none;color:#b3b3b3;font-size:17px;}
 #footer_four {width:316px;float:right;padding:0;margin:0;}
-#footer_four h3 {color:#fff;padding:12px 0 0 0;font-family:'BloggerSans',sans-serif;}
+#footer_bottom{border-top:1px solid #666666;width:1096px;float:left;height:30px;padding:26px 0 0 0;color:#878787;margin:0 0 0 91px;font-family:'Roboto',sans-serif;}
 input[type="text"] {display: block;margin: 0;width:268px;height:45px;font-family: sans-serif;font-size: 18px;appearance: none;box-shadow: none;border-radius: none;float:left;padding:0 0 0 10px;}
 input[type="text"]:focus {outline: none;}
 .style-1 input[type="text"] {padding: 10px;border: solid 1px #dcdcdc;transition: box-shadow 0.3s, border 0.3s;}
@@ -182,7 +190,7 @@ input[type="text"]:focus {outline: none;}
 .style-1 input[type="text"]
 .focus {border: solid 1px #707070;box-shadow: 0 0 5px 1px #969696;}
 #submit {color: #fff;font-size: 0;width:48px;height:45px;border: none;margin: 0;padding: 0;background:url(images/footer_input_button.png) 0 0 no-repeat;float:right; }
-#footer_bottom{border-top:1px solid #666666;width:1096px;float:left;height:30px;padding:26px 0 0 0;color:#878787;margin:0 0 0 91px;font-family:'Roboto',sans-serif;}
+#footer_bottom{border-top:1px solid #666666;width:100%;float:left;height:30px;padding:26px 0 0 0;color:#878787;margin:0 85px;font-family:'Roboto',sans-serif;}
 
 /* internal content general */
 #internal_content {background:#E8F1F2;width:100%;height:941px;}
