--- a/style.css
+++ b/style.css
@@ -293,3 +293,4 @@ input.profiles_date {border:0;border-bottom:1px solid #df5d59;overflow:hidden;re
 #timePicker:before {border-bottom-color: #000;border-width: 16px;margin-left: -16px;}
 .ampmpill {border-radius: 8px;box-sizing: border-box;font-family: "Roboto",sans-serif;font-size: 0px;height:30px;margin: 20px auto 0 auto;overflow: hidden;width: 140px;}
 .ampmpill .ampmswitch {background: #ccc;color: #fff;cursor: pointer;display: inline-block;font-size: 16px;height: 30px;padding: 5px 0 0 0;text-align: center;width: 50%;}
+#profiles_bottom  {background: url(images/add-button.png)no-repeat;padding: 22px 0 0 102px;margin: 37px 0 0 237px;width: 572px;color: #323132;font-size: 20px;font-family: 'Roboto',sans-serif;height: 73px;float: left;}
