--- a/style.css
+++ b/style.css
@@ -267,9 +267,9 @@ ul.profiles_toydetail_block_bottom_right_top {margin:0 0 25px 0;}
 #profiles_toydetail_block_bottom_three_two {float:left;margin:4px 0 0 56px;padding:0;height:67px;width:201px;background:url(images/profile-timepicker-bg.png)no-repeat;}
 #profiles_toydetail_block_bottom_three_three {float:left;margin:14px 0 0 57px;padding:0;height:15px;width:200px;color:#323132;font-size:14px;font-family:'Roboto',san-serif;font-weight:700;}
 #profiles_toydetail_block_bottom_three_four {float:left;margin:4px 0 0 56px;padding:0;height:67px;width:201px;background:url(images/profile-timepicker-bg.png)no-repeat;}
-.profiles_toydetail_block_bottom_three_five {position:relative;background:#8cb75a;border-radius:500px;width:75px;height:35px;margin:210px 0 0 103px;}
-.onoffcircle{position:absolute;top:4px;right:4px;background:white;height:27px;width:27px;border-radius:15px;}
-.onoffbuttontext{position:absolute;top:8px;font-family:'Roboto',sans-serif;}
+.profiles_toydetail_block_bottom_three_five {position:relative;background:#8cb75a;border-radius:500px;width:75px;height:35px;margin:210px 0 0 120px;cursor:pointer}
+.onoffcircle{position:absolute;top:4px;right:4px;background:white;height:27px;width:27px;border-radius:15px;pointer-events:none;}
+.onoffbuttontext{position:absolute;top:8px;font-family:'Roboto',sans-serif;pointer-events:none;}
 .ontext{left:8px;}
 .offtext{right:8px;}
 input.profiles_name {border:0;border-bottom:1px solid #df5d59;overflow:hidden;resize:none;width:178px;background:white;color:#262725;font-family:'Roboto',sans-serif;outline:0;padding:0 0 4px 0;margin:0;height:30px;font-size:24px;}
@@ -286,3 +286,4 @@ input.profiles_date {border:0;border-bottom:1px solid #df5d59;overflow:hidden;re
 #timePicker:before {border-bottom-color: #000;border-width: 16px;margin-left: -16px;}
 .ampmpill {border-radius: 8px;box-sizing: border-box;font-family: "Roboto",sans-serif;font-size: 0px;height:30px;margin: 20px auto 0 auto;overflow: hidden;width: 140px;}
 .ampmpill .ampmswitch {background: #ccc;color: #fff;cursor: pointer;display: inline-block;font-size: 16px;height: 30px;padding: 5px 0 0 0;text-align: center;width: 50%;}
+#profiles_bottom  {background: url(images/add-button.png)no-repeat;padding: 22px 0 0 102px;margin: 37px 0 0 237px;width: 572px;color: #323132;font-size: 20px;font-family: 'Roboto',sans-serif;height: 73px;float: left;}
