--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ input[type="text"]:focus {outline: none;}
 .focus {border: solid 1px #707070;box-shadow: 0 0 5px 1px #969696;}
 #submit {color: #fff;font-size: 0;width:48px;height:45px;border: none;margin: 0;padding: 0;background:url(images/footer_input_button.png) 0 0 no-repeat;float:right; }
 #footer_four h3 {color: #fff;padding: 12px 0 0 0;font-family: 'BloggerSans',sans-serif;}
+#join-mailing-list{width:268px;height:45px;}
 
 /* internal content general */
 #internal_content {background:#E8F1F2;width:100%;height:941px;}
